# mongo

./: CONTRIBUTING.auriga.md  README.md  SConstruct  build-kos.sh
kos/: CMakeLists.txt  README.md  cross-build.sh
kos/docker/: Dockerfile  build-image.sh  create-and-run-container.sh
kos/einit/: CMakeLists.txt
kos/einit/src/: init.yaml.in
kos/mongo-tests/: .gitignore  CMakeLists.txt  Makefile
kos/mongo-tests/einit/: CMakeLists.txt
kos/mongo-tests/einit/src/: init.yaml.in  security.psl.in
kos/mongo-tests/resources/edl/: Test.edl  Testrunner.edl
kos/mongo-tests/resources/image/etc/: hosts
kos/mongo-tests/test_runner/: CMakeLists.txt
kos/mongo-tests/test_runner/src/: test_runner.c
kos/mongod/: .gitignore  CMakeLists.txt
kos/mongod/einit/src/: init.yaml.in  security.psl.in
kos/mongod/resources/image/data/db/: .gitkeep
kos/mongod/resources/image/etc/: hostname
kos/patches/__wt_rdtsc/: 0001-Revert-Fix-usage-of-__wt_rdtsc.patch  0002-__wt_rdtsc-Use-HalGetCpuTicksRelaxed-to-get-CPU-coun.patch  README.md
kos/resources/edl/: Mongod.edl
kos/src/: .gitignore  Makefile  cross-build.sh
kos/src/mongod/: CMakeLists.txt
src/mongo/db/: mongod.cpp  mongod_main.cpp  server_options_helpers.cpp  startup_warnings_mongod.cpp
src/mongo/db/repl/: SConscript  isself.cpp
src/mongo/db/storage/: storage_engine_lock_file_kos.cpp
src/mongo/platform/: process_id.cpp  random.cpp  shared_library_kos.cpp  strcasestr.h
src/mongo/transport/: asio_utils.h  service_entry_point_impl.cpp
src/mongo/unittest/: death_test.cpp
src/mongo/util/: assert_util.cpp  dns_query.cpp  dns_query_kos-impl.h  processinfo_kos.cpp  signal_handlers.cpp  signal_handlers_synchronous.cpp  stacktrace_test.cpp  str.h  time_support.cpp
src/mongo/util/net/: sock.h
src/mongo/watchdog/: watchdog.cpp
